syntax = "proto3";

package sf.apechain.type.v1;

option go_package = "github.com/yourorg/apechain-indexer/types/pb/sf/apechain/type/v1;pbapechain";

import "google/protobuf/timestamp.proto";

// Block is the representation of a block in the ApeChain blockchain.
// This schema follows the Firehose sf.ethereum.type.v2.Block structure
// but is limited to BASE detail level (RPC-extractable data).
//
// The 'ordinal' concept from Firehose is preserved where applicable,
// allowing global ordering of elements within a block.
message Block {
  // Ver represents the data model version of the block
  int32 ver = 1;
  
  // Hash is the block's hash
  bytes hash = 2;
  
  // Number is the block's height
  uint64 number = 3;
  
  // Size is the size in bytes of the RLP encoding of the block
  uint64 size = 4;
  
  // Header contains the block's header information
  BlockHeader header = 5;
  
  // Uncles represents uncle/ommer blocks (empty for PoS chains)
  repeated BlockHeader uncles = 6;
  
  // TransactionTraces hold the execution data of all transactions
  // Note: Limited to BASE level - no internal calls, storage changes
  repeated TransactionTrace transaction_traces = 10;
  
  // DetailLevel indicates the extraction method used
  // For this indexer, always DETAILLEVEL_BASE
  DetailLevel detail_level = 12;
  
  enum DetailLevel {
    DETAILLEVEL_EXTENDED = 0;  // Reserved for instrumented extraction
    DETAILLEVEL_BASE = 2;      // RPC-based extraction (this indexer)
  }
}

message BlockHeader {
  bytes parent_hash = 1;
  bytes uncle_hash = 2;
  bytes coinbase = 3;
  bytes state_root = 4;
  bytes transactions_root = 5;
  bytes receipt_root = 6;
  bytes logs_bloom = 7;
  BigInt difficulty = 8;
  uint64 number = 9;
  uint64 gas_limit = 10;
  uint64 gas_used = 11;
  google.protobuf.Timestamp timestamp = 12;
  bytes extra_data = 13;
  bytes mix_hash = 14;
  uint64 nonce = 15;
  bytes hash = 16;
  BigInt total_difficulty = 17;
  BigInt base_fee_per_gas = 18;
  bytes withdrawals_root = 19;
  optional uint64 blob_gas_used = 22;
  optional uint64 excess_blob_gas = 23;
  bytes parent_beacon_root = 24;
}

message BigInt {
  bytes bytes = 1;
}

// TransactionTrace represents the execution of a transaction.
// For BASE detail level, this includes transaction data and receipt
// but excludes internal calls and state changes.
message TransactionTrace {
  bytes to = 1;
  uint64 nonce = 2;
  BigInt gas_price = 3;
  uint64 gas_limit = 4;
  BigInt value = 5;
  bytes input = 6;
  bytes v = 7;
  bytes r = 8;
  bytes s = 9;
  uint64 gas_used = 10;
  Type type = 12;
  
  enum Type {
    TRX_TYPE_LEGACY = 0;
    TRX_TYPE_ACCESS_LIST = 1;
    TRX_TYPE_DYNAMIC_FEE = 2;
    TRX_TYPE_BLOB = 3;
  }
  
  repeated AccessTuple access_list = 14;
  BigInt max_fee_per_gas = 11;
  BigInt max_priority_fee_per_gas = 13;
  
  // Transaction metadata
  uint32 index = 20;
  bytes hash = 21;
  bytes from = 22;
  
  // Ordinals for global ordering within block
  uint64 begin_ordinal = 25;
  uint64 end_ordinal = 26;
  
  TransactionTraceStatus status = 30;
  TransactionReceipt receipt = 31;
  
  // Blob transaction fields (EIP-4844)
  optional uint64 blob_gas = 33;
  optional BigInt blob_gas_fee_cap = 34;
  repeated bytes blob_hashes = 35;
}

message AccessTuple {
  bytes address = 1;
  repeated bytes storage_keys = 2;
}

enum TransactionTraceStatus {
  UNKNOWN = 0;
  SUCCEEDED = 1;
  FAILED = 2;
  REVERTED = 3;
}

message TransactionReceipt {
  bytes state_root = 1;
  uint64 cumulative_gas_used = 2;
  bytes logs_bloom = 3;
  repeated Log logs = 4;
  optional uint64 blob_gas_used = 5;
  optional BigInt blob_gas_price = 6;
  
  // Contract address if this transaction deployed a contract
  bytes contract_address = 7;
}

message Log {
  bytes address = 1;
  repeated bytes topics = 2;
  bytes data = 3;
  
  // Index relative to transaction
  uint32 index = 4;
  
  // Index relative to block
  uint32 block_index = 6;
  
  // Global ordinal for ordering within block
  uint64 ordinal = 7;
}
